# discord-insights

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
dinsights/: __init__.py  __main__.py  client.py  configs.py  load_token.py
discord_insights/: __main__.py  client.py
tests/: test_discord_bot.py
